--- a/website/_includes/head.html
+++ b/website/_includes/head.html
@@ -46,7 +46,7 @@
         sortBy: 'random',
         });
         // var feeds = [tagFeed, dconFeed];
-        dconFeed.run();
+        tagFeed.run();
     </script>
     {% endif %}
 </head>
