--- a/website/_layouts/post.html
+++ b/website/_layouts/post.html
@@ -26,7 +26,7 @@ layout: default
     {% assign d = page.date | date: "%-d" %}
     {{ page.date | date: "%B" }}
     {% case d %}{% when "1" or "21" or "31" %}{{ d }}st{% when "2" or "22" %}{{ d }}nd{% when "3" or "23" %}{{ d }}rd{% else %}{{ d }}th{% endcase %},
-    {{ page.date | date: "%Y" }}{% if page.comments %} with <a class="smooth-scroll" href="{{ post.url }}#disqus_thread"></a>{% endif %}.</p>
+    {{ page.date | date: "%Y" }}{% if page.comments %}<!-- with <a class="smooth-scroll" href="{{ post.url }}#disqus_thread"></a>{% endif %}-->.</p>
 </div>
 
 {% if page.toc %}
@@ -40,10 +40,10 @@ layout: default
     {{ content }}
 </div>
 
-{% if page.comments %}
+<!--{% if page.comments %}
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     <div id="disqus_thread"></div>
-{% endif %}
+{% endif %}-->
 
 {% if page.share %}
     <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
