--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -81,13 +81,13 @@
                     <li><a href="/about/for-parents">For Parents</a></li>
                 </ul>
             </li>
-            <li><a href="/events/dcon"><i class="fa fa-bolt"></i>DCON 2015</a></li>
+            <li><a href="/events/rtcs"><i class="fa fa-calendar-o"></i>spring rtcs 2015</a></li>
             <li>
-                <a class="menu-drop" href="#"><i class="fa fa-users"></i>Board</a>
-                <ul class="dropdown">
-                    <li><a href="/board">Board Profiles</a></li>
-                    <li><a href="/downloads/district-resources/for-everyone/2014-2015 Official District Board Roster.pdf">District Board Roster (PDF)</a></li>
-                </ul>
+                <!--<a class="menu-drop" href="#"></i>Board</a>
+                <ul class="dropdown">-->
+                    <a href="/board"><i class="fa fa-users"></i>Board</a>
+                    <!--<li><a href="/downloads/district-resources/for-everyone/2015-2016 Official NJ District Board Roster.pdf">District Board Roster (PDF)</a></li>
+                </ul>-->
             </li>
             <li><a href="/calendar"><i class="fa fa-calendar"></i>Calendar</a></li>
             <li>
