Add ICON 2015 page, Webmaster RTC presentation

--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -29,7 +29,13 @@
                     <li><a href="/about/for-parents">For Parents</a></li>
                 </ul>
             </li>
-            <li><a href="/events/rtcs"><i class="fa fa-calendar-o"></i>Spring RTCs 2015</a></li>
+            <li>
+                <a class="menu-drop" href="#"><i class="fa fa-calendar-o"></i>Events</a>
+                <ul class="dropdown">
+                    <li><a href="/events/rtcs">Spring RTCs 2015</a></li>
+                    <li><a href="/events/icon">ICON 2015</a></li>
+                    <li><a href="/events/upcoming">Upcoming</a></li>
+                </ul>
             <li>
                 <!--<a class="menu-drop" href="#"></i>Board</a>
                 <ul class="dropdown">-->
