Change mobile nav to match site nav

--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -63,7 +63,6 @@
     </nav>
     <nav class="mobile-nav">
         <ul>
-            <li class="menu-icon"><a href="#"><i class="fa fa-bars"></i>Menu</a></li>
             <li><a href="/"><i class="fa fa-home"></i>Home</a></li>
             <li>
                 <a class="menu-drop" href="#"><i class="fa fa-pencil"></i>News</a>
@@ -87,7 +86,13 @@
                     <li><a href="/about/for-parents">For Parents</a></li>
                 </ul>
             </li>
-            <li><a href="/events/rtcs"><i class="fa fa-calendar-o"></i>spring rtcs 2015</a></li>
+            <li>
+                <a class="menu-drop" href="#"><i class="fa fa-calendar-o"></i>Events</a>
+                <ul class="dropdown">
+                    <li><a href="/events/rtcs">Spring RTCs 2015</a></li>
+                    <li><a href="/events/icon">ICON 2015</a></li>
+                    <li><a href="/events/upcoming">Upcoming</a></li>
+                </ul>
             <li>
                 <!--<a class="menu-drop" href="#"></i>Board</a>
                 <ul class="dropdown">-->
