Fix mobile nav by restoring menu

--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -63,6 +63,7 @@
     </nav>
     <nav class="mobile-nav">
         <ul>
+            <li class="menu-icon"><a href="#"><i class="fa fa-bars"></i>Menu</a></li>
             <li><a href="/"><i class="fa fa-home"></i>Home</a></li>
             <li>
                 <a class="menu-drop" href="#"><i class="fa fa-pencil"></i>News</a>
