Add Key Leader page

--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -32,8 +32,9 @@
             <li>
                 <a class="menu-drop" href="#"><i class="fa fa-calendar-o"></i>Events</a>
                 <ul class="dropdown">
-                    <li><a href="/events/rtcs">Spring RTCs 2015</a></li>
+                    <li><a href="/events/rtcs">RTCs 2015</a></li>
                     <li><a href="/events/icon">ICON 2015</a></li>
+                    <li><a href="/events/key-leader">Key Leader</a></li>
                     <li><a href="/events/upcoming">Upcoming</a></li>
                 </ul>
             <li>
@@ -90,8 +91,9 @@
             <li>
                 <a class="menu-drop" href="#"><i class="fa fa-calendar-o"></i>Events</a>
                 <ul class="dropdown">
-                    <li><a href="/events/rtcs">Spring RTCs 2015</a></li>
+                    <li><a href="/events/rtcs">RTCs 2015</a></li>
                     <li><a href="/events/icon">ICON 2015</a></li>
+                    <li><a href="/events/key-leader">Key Leader</a></li>
                     <li><a href="/events/upcoming">Upcoming</a></li>
                 </ul>
             <li>
