--- a/website/css/main.css
+++ b/website/css/main.css
@@ -651,6 +651,37 @@ img {
 }
 
 
+/*
+*
+* =KEY LEADER PAGE
+*
+*/
+
+#feature {
+    width: 100%;
+    height: 400px;
+    background-image: url('/img/events/key-leader/cover.jpg');
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    color: white;
+}
+
+#feature h1 {
+    font-size: 400%;
+}
+
+#feature p {
+    margin: 0;
+    line-height: 150%;
+}
+
+#about {
+    background-color: #ededed;
+    padding: 50px 150px 50px 150px;
+}
+
+
 
 /*
 *
