Add blog posts, district resources, fall rally page

--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -33,7 +33,7 @@
                 <a class="menu-drop" href="#"><i class="fa fa-calendar-o"></i>Events</a>
                 <ul class="dropdown">
                     <li><a href="/events/rtcs">RTCs 2015</a></li>
-                    <li><a href="/events/kfamily-picnic">K-Family Picnic</a></li>
+                    <li><a href="/fallrally">Fall Rally 2015</a></li>
                     <li><a href="/events/key-leader">Key Leader</a></li>
                     <li><a href="/events/upcoming">Upcoming</a></li>
                 </ul>
@@ -92,7 +92,7 @@
                 <a class="menu-drop" href="#"><i class="fa fa-calendar-o"></i>Events</a>
                 <ul class="dropdown">
                     <li><a href="/events/rtcs">RTCs 2015</a></li>
-                    <li><a href="/events/kfamily-picnic">K-Family Picnic</a></li>
+                    <li><a href="/fallrally">Fall Rally 2015</a></li>
                     <li><a href="/events/key-leader">Key Leader</a></li>
                     <li><a href="/events/upcoming">Upcoming</a></li>
                 </ul>
