Finish dcon 2016 home page

--- a/dcon/_includes/navbar.html
+++ b/dcon/_includes/navbar.html
@@ -6,12 +6,13 @@
 		<li><a href="/contests">contests</li>
 		<li><a href="/registration">registration</li>
 		<li><a href="/photos">photos</a></li>
-		<li><a href="/gear">resources</a></li>
+		<li><a href="/gear">gear</a></li>
 		<li class="live"><a href="/live">live</a></li>
 		<li class="social">
 			<ul>
 				<li><a href="//www.facebook.com/events/1526953967598862/"><i class="fa fa-facebook"></i></a></li>
 				<li><a href="//twitter.com/njkeyclub"><i class="fa fa-twitter"></i></a></li>
+				<li><a href="//instagram.com/njkeyclub"><i class="fa fa-instagram"></i></a></li>
 			</ul>
 		</li>
 	</ul>
