Start contests page

--- a/dcon/_includes/navbar.html
+++ b/dcon/_includes/navbar.html
@@ -5,7 +5,7 @@
 		<li><a href="/">home</li>
 		<li><a href="/contests">contests</li>
 		<li><a href="/registration">registration</li>
-		<li><a href="/photos">photos</a></li>
+		<!--<li><a href="/photos">photos</a></li>-->
 		<li><a href="/gear">gear</a></li>
 		<li class="live"><a href="/live">live</a></li>
 		<li class="social">
