--- a/dcon/_includes/head.html
+++ b/dcon/_includes/head.html
@@ -9,5 +9,6 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <script src="/js/smoothscroll.js"></script>
   <script src="/js/main.js"></script>
 </head>
