Adjust size of DCON trailer

--- a/dcon-2016/css/main.css
+++ b/dcon-2016/css/main.css
@@ -300,8 +300,8 @@ header h2 {
 /* IFRAME */
 
 #about iframe {
-	width: 700px;
-	height: 393px;
+	width: 560;
+	height: 315px;
 	margin: 10px;
 }
 /* MOBILE STYLES */
