Make background white

--- a/dcon-2016/css/main.css
+++ b/dcon-2016/css/main.css
@@ -10,7 +10,7 @@ html, body {
 	height: 100%;
 	padding: 0;
 	margin: 0;
-	background-color: #efefef;
+	background-color: white;
 	font-family: 'Avenir';
 	overflow-x: hidden;
 	font-size: 1em;
